--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
+    "muse-ui": "^2.1.0",
     "vue": "^2.5.2",
+    "vue-localstorage": "^0.5.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
